--- a/config.php.dist
+++ b/config.php.dist
@@ -2,7 +2,7 @@
 return [
     'dfm_api' => [
         'dfm.api_url' => 'http://localhost:3000',
-        'dfm.api_key' => 'gh*sgSHDsdg#$^34W^sVS(#$SG*$4g9gGR&3',
+        'dfm.api_key' => 'secret',
     ],
     'lime' => [
         'debug' => true,
@@ -10,7 +10,7 @@ return [
         'app.name' => 'DFM API Server',
 //        'session.name' => 'dfmapisession',
 //        'session.cookie_domain' => '.dmf.nl',
-        'sec-key' => 'lkfz48$w%8FiW44w(^#FKsdg#UWFoaf8F(W$',
+        'sec-key' => 'randomstring',
         'temppath.previewimages' => '../image-web',
     ],
 ];
