--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
   "name": "bixie/dfm-api",
   "version": "0.0.1",
-  "title": "DFM API",
   "description": "API client/server for DFM preview requests",
   "license": "MIT",
   "authors": [
@@ -14,7 +13,9 @@
   "require": {
     "guzzlehttp/guzzle": "~6.0",
     "symfony/http-foundation": "^3.0",
-    "aheinze/lime": "^1.0"
+    "aheinze/lime": "^1.0",
+    "ext-json": "*",
+    "ext-zip": "*"
   },
   "autoload": {
     "psr-4": {
