--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
     }
   ],
   "require": {
+    "php": "^7.2.1",
     "guzzlehttp/guzzle": "~6.0",
     "symfony/http-foundation": "^3.0",
     "aheinze/lime": "^1.0",
     "ext-json": "*",
-    "ext-zip": "*"
+    "ext-zip": "*",
+    "hashids/hashids": "^4.0"
   },
   "autoload": {
     "psr-4": {
