--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "aheinze/lime": "^1.0",
     "ext-json": "*",
     "ext-zip": "*",
-    "hashids/hashids": "^4.0"
+    "hashids/hashids": "^4.0",
+    "monolog/monolog": "^2.0"
   },
   "autoload": {
     "psr-4": {
