http auth on keygen

--- a/config.php.dist
+++ b/config.php.dist
@@ -3,6 +3,8 @@ return [
     'dfm_api' => [
         'dfm.api_url' => 'http://localhost:3000',
         'dfm.api_key' => 'secret',
+        'keygen.user' => 'dr',
+        'keygen.password' => 'secret',
     ],
     'lime' => [
         'debug' => true,
