--- a/config.php.dist
+++ b/config.php.dist
@@ -6,6 +6,7 @@ return [
         'keygen.user' => 'dr',
         'keygen.password' => 'secret',
     ],
+    'joomla_root' => '/../',
     'lime' => [
         'debug' => true,
         'path.root' => __DIR__,
